--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,10 @@ dependencies {
     // Internal
     compile 'net.jammos:shared-utils:1.0-SNAPSHOT'
 
+    // Kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     runtime "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '0.19.3'
 
     compile group: 'io.github.microutils', name: 'kotlin-logging', version: '1.4.5'
     compile group: 'io.netty', name: 'netty-all', version: '4.1.9.Final'
@@ -35,4 +37,10 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
 }
