--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     runtime "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '0.19.3'
+    compile group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-jdk8', version: '0.19.3'
 
     compile group: 'io.github.microutils', name: 'kotlin-logging', version: '1.4.5'
     compile group: 'io.netty', name: 'netty-all', version: '4.1.9.Final'
