--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,3 +6,6 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%-5p] [%-25t] %c{1}:%L - %m%n
+
+# Suppress Redis logging to INFO
+log4j.logger.com.lambdaworks.redis=INFO, stdout
